created the sign-up page, added manual router for the time being to the nav list and saving the user created from sign-up to db User

--- a/src/Component/NavBar/navbar.module.css
+++ b/src/Component/NavBar/navbar.module.css
@@ -27,4 +27,11 @@ nav{
 }
 .navList ul li{
     list-style: none;
+    cursor: pointer;
+    font-family:  'Lucida Sans Unicode',"sans-serif";
+    font-weight: 900;
+}
+.navList ul a{
+    text-decoration: none;
+    color: black;
 }
