--- a/src/Pages/Sing-Up/signup.module.css
+++ b/src/Pages/Sing-Up/signup.module.css
@@ -7,7 +7,10 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: #fff;
 }
-
+h1{
+    text-align: center;
+    margin-bottom: 1rem;
+}
 .formContainer form {
     display: flex;
     flex-direction: column;
