--- a/src/Component/Card/card.module.css
+++ b/src/Component/Card/card.module.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     cursor: pointer;
+    margin: 1rem;
 }
 
 .imageContainer {
@@ -28,9 +29,13 @@
     width: 100%;
     height: 20%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
     text-align: center; /* Center text content */
+}
+h4{
+    margin-bottom: 10px;
 }
 button{
     padding:0.5rem;
