--- a/src/Component/NavBar/navbar.module.css
+++ b/src/Component/NavBar/navbar.module.css
@@ -17,7 +17,7 @@ nav{
     font-weight: bold;
 }
 .navList{
-    width: 30%;
+    width: 25%;
 }
 .navList ul{
     display: flex;
@@ -30,7 +30,7 @@ nav{
     cursor: pointer;
     font-family:  'Lucida Sans Unicode',"sans-serif";
     font-weight: 900;
-    margin: 0.6rem;
+    margin-right: 0.4rem;
 }
 .navList ul a{
     text-decoration: none;
