--- a/src/Component/NavBar/navbar.module.css
+++ b/src/Component/NavBar/navbar.module.css
@@ -31,6 +31,10 @@ nav{
     font-family:  'Lucida Sans Unicode',"sans-serif";
     font-weight: 900;
     margin-right: 0.4rem;
+    padding: 5px;
+}
+.navList ul li:hover{
+    background-color: antiquewhite;
 }
 .navList ul a{
     text-decoration: none;
