--- a/src/Pages/Home/home.module.css
+++ b/src/Pages/Home/home.module.css
@@ -56,3 +56,9 @@
     font-size: 1rem;
     font-weight: bold;
 }
+.loaderContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh; /* Optional: Adjust height to cover the entire viewport */
+  }
