add a link to home page in  logo

--- a/src/Component/NavBar/navbar.module.css
+++ b/src/Component/NavBar/navbar.module.css
@@ -40,3 +40,8 @@ nav{
     text-decoration: none;
     color: black;
 }
+.logo a{
+    text-decoration: none;
+    cursor: pointer;
+    color:black;
+}
